--- a/public/gamemodes/manifest.json
+++ b/public/gamemodes/manifest.json
@@ -1,6 +1,6 @@
 {
     "modes": [
-        {"numChallanges": 3, "title": "Test Mode", "challangeData": "test.json"},
-        {"numChallanges": 5, "title": "Test Mode 2", "challangeData": "test.json"}
+        {"numChallanges": 3, "title": "Test Mode", "challange": "test.json"},
+        {"numChallanges": 5, "title": "Test Mode 2", "challange": "test.json"}
     ]
 }
